haproxy/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: openfaas-prometheus-ingress
  namespace: openfaas
  labels:
    app: openfaas
    chart: openfaas-5.6.4
    release: openfaas
    heritage: Helm
spec:
  rules:
  - host: prometheus.openfaas.local
    http:
      paths:
      - backend:
          serviceName: prometheus
          servicePort: 9090
